--- a/style.css
+++ b/style.css
@@ -46,12 +46,11 @@ main {
     padding-left: 5px;
 }
 
-.title .box {
-    transition: all 0.2s ease-in-out;
-    color: pink;
-}
+.box:hover {
+    box-shadow: 0 5px 15px rgba(255, 255, 255, .4);
+} 
 
-.title:hover, .box:hover {
+.box:hover > .title {
     box-shadow: 0 5px 15px rgba(255, 255, 255, .4);
 }
 
