--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --dark: #36454F;
+
+}
+
 * {
     font-size: 16px;
     margin: 0;
@@ -7,7 +12,7 @@
 }
 
 html {
-    background: #36454F;
+    background: var(--dark);
 }
 
 header {
@@ -42,7 +47,7 @@ main {
     border: 1px solid white;
     position: relative;
     bottom: 10px;
-    background: #36454F;
+    background: var(--dark);
     padding-left: 5px;
 }
 
@@ -63,6 +68,8 @@ main {
 code {
     font-size: 14px;
     user-select: all;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 pre {
