added var to css and updated readme

--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ main {
     flex-wrap: wrap;
 }
 
+/* this is a comment, there are many like it, pretend the css is full of them */
+
 .box {
     width: 31%;
     position: relative;
